Made DB driver more transaction aware