@@ -32,7 +32,11 @@ foreach($settings as $const => $val){
 unset($settings);
 
 //A little more constants
-$host = $_SERVER['HTTP_HOST'];
+if(!empty($_SERVER['HTTP_HOST'])){
+	$host = $_SERVER['HTTP_HOST'];
+}else{
+	$host = '';
+}
 $protocol=$_SERVER['PROTOCOL'] = isset($_SERVER['HTTPS']) && !empty($_SERVER['HTTPS']) ? 'https' : 'http';
 define('URL', $protocol.'://'.$host);
 
@@ -66,6 +70,11 @@ if(phpversion() < 8){
 //Load our installed extensions as a session variable
 $exts = dir_contents(__DIR__ . DIRECTORY_SEPARATOR . 'ext');
 $_SESSION['loaded_extensions'] = $exts;
+
+if(defined('SKIP_ROUTER') && SKIP_ROUTER == true){
+	run_filters('cli_init');
+	return;
+}
 
 //Comment this out if you don't want vogon to be password protected
 global $user,
