@@ -1,0 +1,10 @@
+<?php
+
+return [
+    'help' => [
+        'controller' => 'help',
+        'ext' => false,
+        'desc' => 'List all the registered commands',
+        'flags' => []
+    ]
+];
