@@ -1,1 +1,5 @@
+<<<<<<< HEAD
 0.52.1a
+=======
+0.53a
+>>>>>>> 38ff543 (Added base CLI support)
